tests/parser-test-files/bad-files/parse-when.2.error
error: Malformed function
  --> test:4:17
   |
 4 |  (define x (when 1))
   |                   ^ expected body
