tests/parser-test-files/bad-files/parse-when.2.coal
;; BAD: Parse When
(package test-package)

(define x (when 1))
